--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Marc Mauri Alloza <marc.mauri@codurance.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+behave = "^1.2.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.2.0"
