--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,13 @@ authors = ["Marc Mauri Alloza <marc.mauri@codurance.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-behave = "^1.2.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.2.0"
 autopep8 = "2.0.0"
 flake8 = "5.0.4"
 mypy = "0.982"
-pytest-cov = "4.0.0"
+behave = "1.2.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
